# file-organizer

./: .gitignore  BACKLOG.md  organize.py  pyproject.toml  run-organizer.sh
FileOrganizerLauncher/: main.swift
FileOrganizerLauncher.app/Contents/: Info.plist
FileOrganizerLauncher.app/Contents/MacOS/: FileOrganizerLauncher
file_organizer/: __init__.py  cli.py  config.py  operations.py  utils.py
tests/: conftest.py  test_cli.py  test_operations.py  test_utils.py
